Added developer; Chazz Wolcott.

--- a/README
+++ b/README
@@ -24,6 +24,7 @@ Team, a team managed by TechnoDevs.
 Elijah "starcoder" Perrault - Head Developer
 Matthew "MattB/MattWB" Barksdale - Developer
 Mitchell "cooper" Cooper - Developer
+Chazz Wolcott - Developer
 
 If you are interested in becoming a developer for Chakora,
 please contact Elijah at elijah@technoirc.org
