Added developer; Clay "Freelancer" Freeman.

--- a/README
+++ b/README
@@ -25,6 +25,7 @@ Elijah "starcoder" Perrault - Head Developer
 Matthew "MattB/MattWB" Barksdale - Developer
 Mitchell "cooper" Cooper - Developer
 Chazz Wolcott - Developer
+Clay "Freelancer" Freeman - Developer
 
 If you are interested in becoming a developer for Chakora,
 please contact Elijah at elijah@technoirc.org
