--- a/docs/TODO
+++ b/docs/TODO
@@ -41,15 +41,15 @@
 	[ ] Request
 [ ] Core
 	[X] Add module_void
-	[ ] Improve CTCP handling
-	[ ] Add is_oper
+	[ ] Improve CTCP handling (make add_ctcp_handler and ctcp_reply perhaps?)
+	[ ] Add is_oper (This is easy in InspIRCd, not in Charybids)
 [ ] Protocols
 	[X] Add serv_kill
 	[ ] Add serv_enforce
 	[ ] Add function to hold nicknames
-	[ ] Charybdis: find a way to properly tell if a user is an oper
-	[!] Add serv_jupe (InspIRCd still lacks this, developers who can create some sort of SID generator and check if its in us, go for it)
-	[X] InspIRCd: strip modes on a user in FJOIN
+	[ ] Charybdis: find a way to properly tell if a user is an oper 
+	[!] Add serv_jupe (InspIRCd still lacks this, developers who can create some sort of SID generator and check if its in us, go for it --Matthew)
+	[X] InspIRCd: strip modes on a user in FJOIN (I was stupid, it already did that --Matthew)
 
 Key: 
 	X = Done
