--- a/docs/TODO
+++ b/docs/TODO
@@ -41,14 +41,16 @@
 	[ ] Request
 [ ] Core
 	[X] Add module_void
-	[ ] Improve CTCP handling (make add_ctcp_handler and ctcp_reply perhaps?)
+	[X] Add ctcp_reply
+	[ ] Add module_is_loadable (check if the file exists perhaps?)
+	[ ] Improve CTCP handling (make add_ctcp_handler and del_ctcp_handler perhaps?)
 	[ ] Add is_oper (This is easy in InspIRCd, not in Charybids)
 [ ] Protocols
 	[X] Add serv_kill
 	[ ] Add serv_enforce
 	[ ] Add function to hold nicknames
 	[ ] Charybdis: find a way to properly tell if a user is an oper 
-	[!] Add serv_jupe (InspIRCd still lacks this, developers who can create some sort of SID generator and check if its in us, go for it --Matthew)
+	[!] Add serv_jupe (InspIRCd's module still lacks this, developers who can create some sort of SID generator and check if its in us, go for it --Matthew)
 	[X] InspIRCd: strip modes on a user in FJOIN (I was stupid, it already did that --Matthew)
 
 Key: 
