Sometime we need to add docs for the module api

--- a/docs/TODO
+++ b/docs/TODO
@@ -57,6 +57,8 @@
  	[ ] Charybdis: find a way to properly tell if a user is an oper 
 	[!] Add serv_jupe (InspIRCd's module still lacks this, developers who can create some sort of SID generator and check if its in us, go for it --Matthew)
 	[X] InspIRCd: strip modes on a user in FJOIN (I was stupid, it already did that --Matthew)
+[ ] Docs
+	[ ] Add docs for the module api
 
 Key: 
 	X = Done
