--- a/docs/TODO
+++ b/docs/TODO
@@ -49,7 +49,7 @@
 	[X] Add ctcp_reply
 	[ ] Add module_is_loadable (check if the file exists perhaps?)
 	[ ] Improve CTCP handling (make add_ctcp_handler and del_ctcp_handler perhaps?)
-	[ ] Add is_oper (This is easy in InspIRCd, not in Charybids)
+	[ ] Add is_oper (This is easy in InspIRCd, not in Charybdis)
 [ ] Protocols
 	[X] Add serv_kill
 	[ ] Add serv_enforce
