--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -18,3 +18,5 @@ Current
 	- API: Added ctcp_reply
 	- Setup: We no longer provide a config generator, we now provide an example config for you to edit
 	- InspIRCd/Charybdis: Properly handle whether or not a user is an oper.
+	- Module API: added event_deoper and event_oper (meaning you can add hooks for them)
+	- Trunk: Updated os_userlog to handle opers and deopers
