--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -29,3 +29,5 @@ Current
 	- Trunk: Updated os_userlog to log when a user goes away and returns
 	- Module API: event_uid now includes the server a user is connecting from
 	- Trunk: Updated os_userlog to log what server a user is quitting/connecting from
+	- API: Added is_soper
+	- Modules: Added operserv/shutdown and operserv/global
