--- a/docs/TODO
+++ b/docs/TODO
@@ -18,7 +18,7 @@
 	[ ] Set
 	[ ] Ghost
 	[ ] Release
-	[X] Account name 
+	[!] Account name (Sub done, module not)
 [ ] ChanServ
 	[ ] Register
 	[ ] Drop
@@ -31,12 +31,15 @@
 	[ ] Delete
 [ ] OperServ
 	[ ] Restart
-	[ ] Shutdown
+	[X] Shutdown
 	[ ] Rehash
-	[ ] Module management (list, info, load, unload)
+	[!] Module management (list, info, load, unload)
+	[ ] Make modload, modunload and protocls - unloadable
+	[ ] Improve the error messages in modload, if the file doesn't exist say that.
+	[ ] The protocols need to be a module (Add $Chakora::MODULE{name} $Chakora::MODULE{author} and $Chakora::MODULE{version} to the top of the protocol --Matthew)
 	[ ] AKill
 	[ ] Jupe
-	[ ] Global (Obviously we need to finish send_global first)
+	[X] Global
 	[ ] Logonnews (Add a hook using hook_uid_add, sending a( ) notice(s) to users on connect? --Matthew)
 [ ] HostServ
 	[ ] Set vHosts
@@ -59,6 +62,7 @@
 	[!] Add serv_jupe (InspIRCd's module still lacks this, developers who can create some sort of SID generator and check if its in us, go for it --Matthew)
 	[X] InspIRCd: strip modes on a user in FJOIN (I was stupid, it already did that --Matthew)
 	[X] Charybdis: Oper regex needs fixed (for one +a isn't always applied, also +o isn't the only mode, so the current one won't work --Matthew)
+	[X] Add serv_accoutname
 [ ] Docs
 	[ ] Add docs for the module api
 
