Updated to add what Elijah needs to do now

--- a/docs/TODO
+++ b/docs/TODO
@@ -66,6 +66,8 @@
 [ ] Docs
 	[X] Add docs for the module api
 	[ ] Improve module api docs (add sidInfo and uidInfo for one)
+[ ] Other
+	[ ] Allow custom services to be made and handled like others
 Key: 
 	X = Done
 	! = In development
