--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -38,3 +38,7 @@ Current
 	- Contrib - mattwb65: Added chanserv/lol (for an example command) and chanserv/away (for an example hook module) 
 	- Docs: Added API docs
 	- Core: We no longer censor register
+	- Core: Formatted the time chakora was started in the "Chakor was started" message
+	- Chakora: Unbreak - lib files were misplaced
+	- Core: Added SIGINT handling
+	- Modules: Made operserv/shutdown log to the logfile
