--- a/docs/TODO
+++ b/docs/TODO
@@ -11,6 +11,11 @@
 	[X] send_global sub (Use a foreach statement for %uid's to send a NOTICE to each user? --Matthew)
 [ ] NickServ
 	[!] Register
+		[ ] Check for valid a valid email address
+		[ ] Improve $count
+		[ ] When an account is dropped, we need to reuse that accounts ID
+		[ ] Set default nickserv flags
+		[ ] Set a limit to the number of accounts a email address can have
 	[ ] Group
 	[ ] Identify
 	[ ] Drop
