--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -44,3 +44,4 @@ Current
 	- Modules: Made operserv/shutdown log to the logfile
 	- API: Added is_registered
 	- Modules: nickserv/register now writes to the db and checks if the nickname is already registered
+	- Core: killed src/Chakora/Protocol and src/Chakora/Server.
