Added ./man for the Chakora API Manual.

--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -67,3 +67,4 @@ Current
 	- API: Added create_cmdtree() and delete_cmdtree() for enabling commands on only services clients we want to have commands.
 	- Protocols: Added nick tracking for services on InspIRCd and half-way on Charybdis.
 	- API: Added event_pds for executing hooks during syncing.
+	- Chakora: Added ./man in bin/ for viewing the Chakora API Manual.
