--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -86,3 +86,4 @@ Current
 	- API: Added event_cs_register
 	- Protocols: Fixed bugs and added isonchan() for checking whether a user is on a channel or not.
 	- Core: Check for m_muteban in InspIRCd
+	- Modules: nickserv/info - Added "<nick> is a Services Operator." if they are identified to an account with soper privs
