--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -91,3 +91,4 @@ Current
 	- API: Added flaglist_add flaglist_del and flag_exists
 	- Chakora: Added chanserv/register and full status sync subs, channel and user member of channel trackers and bug fixes.
 	- API: Added event_kick and event_topic
+	- Protocols: Track KICK and TOPIC
