* Demoted developer; Freelancer -> Contributor * New developers; Russell and Niall

--- a/README
+++ b/README
@@ -36,7 +36,9 @@ Team, a team managed by TechnoDevs.
 Elijah "starcoder" Perrault - Head Developer
 Matthew "MattB/MattWB" Barksdale - Co-Head Developer
 Chazz Wolcott - Developer
-Clay "Freelancer" Freeman - Developer
+Russell Bradford - Developer
+Niall Davies - Developer
+Clay "Freelancer" Freeman - Contributor
 
 If you are interested in becoming a developer for Chakora,
 please contact Elijah at elijah@technoirc.org
