Include credits to Atheme and Shrike for some design concepts.

--- a/README
+++ b/README
@@ -43,6 +43,11 @@ Clay "Freelancer" Freeman - Contributor
 If you are interested in becoming a developer for Chakora,
 please contact Elijah at elijah@technoirc.org
 
+Other Credits:
+
+Atheme (http://atheme.net) - Some design concepts
+Shrike (http://malkier.net) - Some design concepts
+
 2. DESCRIPTION
 --------------
 
