--- a/docs/TODO
+++ b/docs/TODO
@@ -69,12 +69,12 @@
 	[X] InspIRCd: strip modes on a user in FJOIN (I was stupid, it already did that --Matthew)
 	[X] Charybdis: Oper regex needs fixed (for one +a isn't always applied, also +o isn't the only mode, so the current one won't work --Matthew)
 	[X] Add serv_accoutname
+	[ ] Make the UID generator use letters instead of numbers.
 [ ] Docs
 	[X] Add docs for the module api
 	[!] Improve module api docs (add sidInfo and uidInfo for one)
 [ ] Other
 	[X] Allow custom services to be made and handled like others
-	[ ] Elijah - since you like being proper, our UID gen. is shit and not proper - fix it.
 Key: 
 	X = Done
 	! = In development
