We should tell more into this

--- a/docs/TODO
+++ b/docs/TODO
@@ -69,7 +69,7 @@
 	[X] InspIRCd: strip modes on a user in FJOIN (I was stupid, it already did that --Matthew)
 	[X] Charybdis: Oper regex needs fixed (for one +a isn't always applied, also +o isn't the only mode, so the current one won't work --Matthew)
 	[X] Add serv_accoutname
-	[ ] Make the UID generator use letters instead of numbers.
+	[ ] Make the UID generator use letters instead of numbers, since our current way isn't proper.
 [ ] Docs
 	[X] Add docs for the module api
 	[!] Improve module api docs (add sidInfo and uidInfo for one)
