--- a/docs/TODO
+++ b/docs/TODO
@@ -70,6 +70,15 @@
 	[X] Charybdis: Oper regex needs fixed (for one +a isn't always applied, also +o isn't the only mode, so the current one won't work --Matthew)
 	[X] Add serv_accoutname
 	[ ] Make the UID generator use letters instead of numbers.
+	[ ] Native ShadowIRCd support.
+	[ ] Native ircd-ratbox support.
+	[?] ircd-hybrid support.
+	[?] UnrealIRCd support.
+	[?] ircu support.
+	[?] Bahamut support.
+	[?] ircd-plexus support.
+	[ ] TS6-generic support.
+	[?] P10-generic support.
 [ ] Docs
 	[X] Add docs for the module api
 	[!] Improve module api docs (add sidInfo and uidInfo for one)
