Added has_flag and added more core flags

--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -99,3 +99,4 @@ Current
 	- Modules: Made ChanServ modular with chanserv/main. All ChanServ modules will load this if it's not loaded as it is dependent on ChanServ.
           You should add chanserv/main to autoload before any ChanServ modules regardless.
 	- Chakora: updateTS is now a config option. WE HIGHLY ENCOURAGE ENABLING IT.
+	- API: added has_flag
