--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -101,3 +101,4 @@ Current
 	- Chakora: updateTS is now a config option. WE HIGHLY ENCOURAGE ENABLING IT.
 	- API: added has_flag
 	- Modules: Added chanserv/sync
+	- API: added ison
