--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -105,3 +105,4 @@ Current
 	- Modules: Added chanserv/invite
 	- Protocols: InspIRCd renamed to InspIRCd12, support for InspIRCd20 will be added soon.
 	- API: added event_stopic for topic bursts
+	- Protocols - Charybdis: Added raw_motd
