--- a/docs/TODO
+++ b/docs/TODO
@@ -70,7 +70,7 @@
 	[!] Add serv_jupe (InspIRCd's module still lacks this, developers who can create some sort of SID generator and check if its in use, go for it --Matthew)
 	[X] InspIRCd: strip modes on a user in FJOIN (I was stupid, it already did that --Matthew)
 	[X] Charybdis: Oper regex needs fixed (for one +a isn't always applied, also +o isn't the only mode, so the current one won't work --Matthew)
-	[ ] InspIRCd: Add raw_motd and raw_admin
+	[X] InspIRCd: Add raw_motd and raw_admin
 	[X] Add serv_accoutname
 	[ ] Make the UID generator use letters instead of numbers.
 	[ ] Native ShadowIRCd support.
