--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -106,4 +106,4 @@ Current
 	- Protocols: InspIRCd renamed to InspIRCd12, support for InspIRCd20 will be added soon.
 	- API: added event_stopic for topic bursts
 	- Protocols: Added raw_motd and raw_admin
-	- Modules: Added chanserv/op and chanserv/voice
+	- Modules: Added chanserv/op, chanserv/voice, and chanserv/protect
