Added a memoserv frame

--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -111,3 +111,4 @@ Current
 	- API: added in_group
 	- Modules: Added to nickserv/set: set accountname and no status
 	- API: extended is_register to channels
+	- Modules: added memoserv/main
